Complete portfolio redesign with work experience and custom favicon
- Implemented crimson professional color scheme (#dc143c, #0d0d0d, #2a2a2a)
- Added custom glowing cursor with magnetic effects
- Created interactive section title hover effects with TR monogram watermark
- Added comprehensive work experience section with 5 positions
- Updated projects showcase with crimson accents and static data
- Implemented resume download functionality with proper file handling
- Created custom T favicon with cursive design
- Updated navigation with experience section
- Added Vercel deployment configuration
- Enhanced all components with crimson theme styling
- Added proper meta tags and SEO optimization

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
+    <title>Terence Richardson - Full-Stack Developer</title>
+    <meta name="description" content="Terence Richardson - Full-Stack Developer specializing in AI-first development and modern web technologies." />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
